Fixes for main menu + hamburger menu overlaps when opened

--- a/src/components/MainMenu/MainMenu.css
+++ b/src/components/MainMenu/MainMenu.css
@@ -11,6 +11,3 @@
     
 }
 
-.ui.menu{
- /* height: 60px; */
-}
